# llm-discovery

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml  update-prebuilt-data.yml  version-check.yml
data/prebuilt/: models.json
docs/: conf.py  index.md  quickstart.md
llm_discovery/: exceptions.py
llm_discovery/cli/: main.py  output.py
llm_discovery/cli/commands/: export.py  list.py  update.py
llm_discovery/models/: __init__.py  config.py  provider.py
llm_discovery/services/: __init__.py  cache.py  change_detector.py  discovery.py  snapshot.py
llm_discovery/services/exporters/: csv_exporter.py  json_exporter.py  markdown_exporter.py  toml_exporter.py  yaml_exporter.py
llm_discovery/services/fetchers/: anthropic.py  google.py  openai.py
specs/001-llm-model-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-model-discovery/checklists/: packaging.md
specs/002-docs/: tasks.md
src/llm_discovery/: __init__.py
tests/: conftest.py  test_changelog_generator.py  test_cli.py  test_config.py  test_docs.py  test_exceptions.py  test_init.py
tests/integration/: test_cli_data_source_display.py
